# 2022-2023

./: CTest.java  Java_org_firstinspires_ftc_teamcode_CTest.c  README.md
TeamCode/: build.gradle
TeamCode/src/main/cpp/: CMakeLists.txt  ThreadingTest.cpp  libcardinal.cpp  libcardinal.h
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/: AUTO_BOTTOM_LEFT.java  AUTO_BOTTOM_RIGHT.java  AUTO_TOP_LEFT.java  AUTO_TOP_RIGHT.java  AssortedTests.java  AutoLogic.c  AutoLogic.h  AutoPathfinding.java  AutonomousController.java  CameraTest.java  CameraTest_Color.java  ConceptVuforiaFieldNavigationWebcam.java  ControllerTest.java  DO_A_FLIP.java  EncoderTest.java  ExponentialAverageFilter.java  IMUTest.java  MovingAverageFilter.java  RobotController.java  Sub_AutoDropCone.java  Sub_AutoPickupCone.java  ThreadingTest.java  libcardinal.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/DSYS/: Base.java  Colors.java  IO.java  Input.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/DSYS/GUI/: Window.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/Pathfinding/: BFS.java  Coordinate.java  FieldContainer.java  field.txt
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/TEST_OPS/: CameraTest.java  CameraTest_Color.java  ColorTest.java  ConceptVuforiaFieldNavigationWebcam.java  ControllerTest.java  EncoderTest.java  IMUTest.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/Vision/: ConeColorPipeline.java  GrayStreamPipeline.java
TeamCode/src/main/java/org/opencv/ximgproc/: Ximgproc.java
